--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -2,6 +2,10 @@ worker_processes  1;
 error_log stderr warn;
 pid /run/nginx.pid;
 
+events {
+    worker_connections  1024;
+}
+
 http {
     include       mime.types;
     default_type  application/octet-stream;
