--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -30,6 +30,8 @@ http {
         root /var/www/html;
         index index.html;
 
+        error_page 404 /404.html;
+
         location / {
             # First attempt to serve request as file, then
             # as directory, then fall back to index.php
