smal fixes and move to drone

--- a/container-fs/etc/nginx/nginx.conf
+++ b/container-fs/etc/nginx/nginx.conf
@@ -9,6 +9,8 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
+    large_client_header_buffers 4 64k;
+    client_max_body_size 10M;
 
     log_format  main_timed  '$remote_addr - $remote_user [$time_local] "$request" '
                             '$status $body_bytes_sent "$http_referer" '
