--- a/container-fs/etc/nginx/conf.d/default.conf
+++ b/container-fs/etc/nginx/conf.d/default.conf
@@ -1,5 +1,7 @@
 server {
-    listen 0.0.0.0:8080;
+    listen [::]:8080 default_server;
+    listen 8080 default_server;
+    server_name _;
     root /var/www/html;
     index index.html;
     location / {
@@ -11,5 +13,15 @@ server {
         fastcgi_pass  127.0.0.1:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+    }
+
+    # allow fpm ping and status from localhost
+    location ~ ^/(fpm-status|fpm-ping)$ {
+        access_log off;
+        allow 127.0.0.1;
+        deny all;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_pass 127.0.0.1:9000;
     }
 }
